# Matrix

./: CMakeLists.txt  main.cpp  multiply_matrix.cl
